--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 server.port=8305
-spring.profiles.active=dev
+spring.profiles.active=prod
+secretkey=Rp0NPkONf/kIrhNlq3L0Gg==
+jwt.secret=d2zapkTUyZ9mFmvr9u5ncA==
